fixed spacing for Military discount block

--- a/public/assets/css/tkgreen/main.css
+++ b/public/assets/css/tkgreen/main.css
@@ -307,9 +307,6 @@ a:hover, a:focus {
   grid-row: 1/2;
   grid-column: 1/3;
 }
-.grid-two-columns {
-  background: pink !important;
-}
 
 [class*=flex-] {
   display: flex;
@@ -1009,6 +1006,15 @@ a:hover, a:focus {
   margin-block-start: 1em;
   margin-block-end: 1em;
   background-color: inherit;
+}
+
+section:has(#Military) {
+  background-color: #77acfb;
+  color: rgba(26, 26, 26, 0.99);
+}
+
+#Military.imageElement {
+  padding: 2em;
 }
 
 .cards {
